--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
 			content="Studio Maureen — Fullstack Developer and UI/UX Designer. Bespoke development for unique front-end solutions. Crafting digital solutions to elevate your brand."
 		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+		<link rel="preload" href="./cards-light.jpg" as="image" media="(prefers-color-scheme: light)" />
+		<link rel="preload" href="./cards-dark.jpg" as="image" media="(prefers-color-scheme: dark)" />
 		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
